Add Projects Page & Update CV

--- a/components/NavigationBar/NavigationBar.html
+++ b/components/NavigationBar/NavigationBar.html
@@ -8,6 +8,9 @@
 	<a class="NavBarButton" target="_top" href="../../pages/publications/publications.html">
 		<p class = "NavBarText">Publications</p>
 	</a>
+	<a class="NavBarButton" target="_top" href="../../pages/research/research.html">
+		<p class = "NavBarText">Research</p>
+	</a>
 	<a class="NavBarButton" target="_top" href="../../pages/projects/projects.html">
 		<p class = "NavBarText">Projects</p>
 	</a>
