--- a/components/NavigationBar/NavigationBar.html
+++ b/components/NavigationBar/NavigationBar.html
@@ -12,7 +12,7 @@
 		<p class = "NavBarText">Research</p>
 	</a>
 	<a class="NavBarButton" target="_top" href="../../pages/projects/projects.html">
-		<p class = "NavBarText">Projects</p>
+		<p class = "NavBarText">Hobby Projects</p>
 	</a>
 </div>
 </html>
