Update Website & Resume/CV

--- a/components/NavigationBar/NavigationBar.css
+++ b/components/NavigationBar/NavigationBar.css
@@ -11,6 +11,10 @@
     border-right: 0;
     padding-right: 0;
 
+    margin-bottom: 0;
+    padding-bottom: 0;
+    
+
     display: flex;
     width:100%;
     font-size: 20px;
