--- a/components/NavigationBar/NavigationBar.html
+++ b/components/NavigationBar/NavigationBar.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 <link rel="stylesheet" href="NavigationBar.css">
 <link rel="stylesheet" href="../SharedStyle.css">
 <div id="mainNavigationBar">			
