--- a/components/SharedStyle.css
+++ b/components/SharedStyle.css
@@ -1,19 +1,24 @@
 #Header-Text {
     text-align: center;
     font-size: xx-large;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    padding-bottom: 0;
+    padding-top: 0;
 }
 iframe{
     margin:0;
     border:0;
     padding:0;
     width:100%;
+    margin-bottom:0px;
 }
 html, body
 {
     margin: 0;
     border: 0;
     padding: 0;
-    overflow-x: hidden; 
+    overflow-x: hidden;
     background-color: #bdc9e1;
     height: 100%;
     width: 100%;
